--- a/src/main/webapp/css/my.css
+++ b/src/main/webapp/css/my.css
@@ -18,6 +18,7 @@
     border: 1px solid black;
     margin: 5px;
     font-family: Arial;
+    border-collapse: collapse;
 
 }
 
@@ -50,4 +51,8 @@ select{
     font-family: Arial;
     font-size: large;
     text-align: center;
+}
+#active{
+    color:red;
+    border-color: red;
 }
